# trse

./: Cargo.toml  README.md
src/: args.rs  files.rs  main.rs
