[package]
name = "trse"
version = "0.2.0"
edition = "2021"
authors = ["James B."]
description = "A simple implementation of unix utility tree in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.5", features = ["derive"]}
